# web_translate_project

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data/test_html/: test1.html  test1_translated.html  test2.html  test2_translated.html  test3.html  test3_translated.html
notebooks/: test.ipynb
src/: utils.py
