[tool.poetry]
name = "web-translate-projiect"
version = "0.1.0"
description = "webサイトをChatGPTで高精度にページ翻訳するプロジェクト"
authors = ["yukimaru77 <yukimidaifuku@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.55.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
retry = "^0.9.2"
langfuse = "^2.53.2"
beautifulsoup4 = "^4.12.3"
htmlmin = "^0.1.12"
html2text = "^2024.2.26"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pre-commit = "^4.0.1"
nbstripout = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
